@@ -1,5 +1,5 @@
 /*
- * Copyright  2000-2004 The Apache Software Foundation
+ * Copyright  2000-2005 The Apache Software Foundation
  *
  *  Licensed under the Apache License, Version 2.0 (the "License");
  *  you may not use this file except in compliance with the License.
@@ -149,6 +149,9 @@ public class Cab extends MatchingTask {
     /**
      * Creates a list file.  This temporary file contains a list of all files
      * to be included in the cab, one file per line.
+     *
+     * <p>This method expects to only be called on Windows and thus
+     * quotes the file names.</p>
      */
     protected File createListFile(Vector files)
         throws IOException {
@@ -157,8 +160,9 @@ public class Cab extends MatchingTask {
 
         PrintWriter writer = new PrintWriter(new FileOutputStream(listFile));
 
-        for (int i = 0; i < files.size(); i++) {
-            writer.println(files.elementAt(i).toString());
+        int size = files.size();
+        for (int i = 0; i < size; i++) {
+            writer.println('\"' + files.elementAt(i).toString() + '\"');
         }
         writer.close();
 
